--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -9,9 +9,9 @@
 
         <div>
             {% for room in rooms %}
-                <h5>{{ room.id }} --- <a href="/room/{{ room.id  }}">{{ room.name }}</a></h5>
+                <h5>{{ room.id }} --- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
             {% endfor %}
-        </div>
+        </div> 
     
     </div>
 
