--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,10 +6,14 @@
     <h1>Welcome Home Another !</h1>
 
     <div>
-
+        <a href="{% url 'create-room' %}">Create Room </a>
+        
         <div>
             {% for room in rooms %}
+                <span>@{{ room.host.username }}</span>
                 <h5>{{ room.id }} --- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
+                <small>{{ room.topic }}</small>
+                <hr>
             {% endfor %}
         </div> 
     
