--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -2,30 +2,57 @@
 
 {% block content %}
 
-<h1> {{ room.name }}</h1>
+<style>
+    .room-container {
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+</style>
 
-<h3> {{ room.description }}</h3>
+<div class="room-container">
+    <div>
+        <h1> {{ room.name }}</h1>
 
-<div class="comment-wrapper">
-    <h3>Conversation</h3>
-    <hr>
-    
-    {% for message in room_messages %}
-        <div>
-            <small>@{{ message.user }} {{ message.created|timesince }} ago</small>
-            <p>{{ message.body }}</p>
-            <hr> 
+        <h3> {{ room.description }}</h3>
+
+        <div class="comment-wrapper">
+            <h3>Conversation</h3>
+            <hr>
+            
+            {% for message in room_messages %}
+                <div>
+                    {% if request.user == message.user %}
+                        <a href="{% url 'delete-message' message.id %}">Delete</a>
+                    {% endif %}
+                    <small>@{{ message.user }} {{ message.created|timesince }} ago</small>
+                    <p>{{ message.body }}</p>
+                    <hr> 
+                </div>
+            {% endfor%}
         </div>
-    {% endfor%}
+
+        {% if user.is_authenticated %}
+            <div class="comment-form">
+                <form method="POST" action="">
+                    {% csrf_token %} 
+                    <input type="text" name="body" placeholder="Write your message here...">
+                </form>
+            </div>
+        {% endif %}
+    </div>
+
+    <div>
+        <h3>Participants</h3>
+        <hr>
+        
+        {% for user in participants %}
+            <div>
+                @{{ user.username }}
+            </div>
+        {% endfor %}
+    </div>
 </div>
 
-{% if user.is_authenticated %}
-    <div class="comment-form">
-        <form method="POST" action="">
-            {% csrf_token %} 
-            <input type="text" name="body" placeholder="Write your message here...">
-        </form>
-    </div>
-{% endif %}
+
 
 {% endblock %}
