--- a/base/templates/base/delete.html
+++ b/base/templates/base/delete.html
@@ -5,7 +5,7 @@
 <form method="POST" action="">
     {% csrf_token %}
     
-    <a href="">Go Back</a>
+    <a href="{{ request.META.HTTP_REFERER }}">Go Back</a>
     <p>Are you sure you want to delete {{ obj }} ?</p>
     <input type="submit" value="Confirm">
 </form>
