--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,24 +1,22 @@
 {% extends 'main.html' %}
 
+{% block content %}
 
-{% block content %} 
+<h3>{{ user.username }}</h3>
 
 <style>
-    .home-container {
+    .profile-container {
         display: grid;
         grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
-    
-<div class="home-container">
+
+<div class="profile-container">
     <div>
         {% include 'base/topic_component.html' %}
     </div>
 
     <div>
-        <h3>{{ room_count }} rooms available</h3>
-        <a href="{% url 'create-room' %}">Create Room </a>
-        
         {% include 'base/feed_component.html' %}
     </div>
 
